--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -20,7 +20,7 @@
     <div class="header">
       <div class="header__left">
         <i id="menu" class="material-icons">menu</i>
-        <h1 style="color: teal;" >VideoPoint</h1>
+        <h1 style="color: teal;" >شركاء المتجر</h1>
       </div>
 
       <div class="header__search">
@@ -50,34 +50,34 @@
         <div class="sidebar__categories">
           <div class="sidebar__category" id="home">
             <i class="material-icons">home</i>
-            <span>Home</span>
+            <span>الرئيسية</span>
           </div>
           <div class="sidebar__category" id="trend">
             <i class="material-icons">local_fire_department</i>
-            <span>Trending</span>
+            <span>الأحدث</span>
           </div>
           <div class="sidebar__category" id="myvideos">
             <i class="material-icons">subscriptions</i>
-            <span>myVideos</span>
+            <span>المشاريع</span>
           </div>
         </div>
         <hr />
         <div class="sidebar__categories" onclick="location.replace('./ViewAll')">
           <div class="sidebar__category">
             <i class="material-icons">play_arrow</i>
-            <span>Explore More</span>
+            <span>إستكشاف المزيد</span>
           </div>
           <div class="sidebar__category" id="watch_later">
             <i class="material-icons">play_arrow</i>
-            <span>Watch Later</span>
+            <span>مشاهدة في وقت لاحق</span>
           </div>
           <div class="sidebar__category" id="login">
             <i class="material-icons">login</i>
-            <span>SignIn  </span>
+            <span>تسجيل الدخول  </span>
           </div>
           <div class="sidebar__category" id="logout">
             <i class="material-icons">logout</i>
-            <span>SignOut</span>
+            <span>تسجيل الخروج</span>
           </div>
         </div>
         <hr />
