--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- CSS File -->
     <link rel="stylesheet" href="./assets/css/jquery.jdSlider.css">
     <link rel="stylesheet" href="./assets/css/styles.css" />
-    <title>Video Point</title>
+    <title>الشركاء</title>
     <script src="./assets/lib/jquery.min.js"></script>
     <script src="./assets/lib/jquery.jdSlider-latest.js"></script>
   </head>
